--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <div class="card">
+      <span class="top-suit">&spades;</span>
       <span class="number">7</span>
+      <span class="bottom-suit">&spades;</span>
     </div>
     <script type="text/javascript" src="bundle/bundle.js"></script>
   </body>
