avances del random card Generator

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <div class="card">
-      <span class="top-suit">&spades;</span>
-      <span class="number">7</span>
-      <span class="bottom-suit">&spades;</span>
+      <spam class="top-suit">&spades;</spam>
+      <spam class="numbers">7</spam>
+      <spam class="bottom-suit">&spades;</spam>
     </div>
     <script type="text/javascript" src="bundle/bundle.js"></script>
   </body>
