--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <div class="card">
-      <spam class="top-suit">&spades;</spam>
-      <spam class="numbers">7</spam>
-      <spam class="bottom-suit">&spades;</spam>
+      <spam class="top-suit"></spam>
+      <spam class="numbers"></spam>
+      <spam class="bottom-suit"></spam>
     </div>
     <script type="text/javascript" src="bundle/bundle.js"></script>
   </body>
